--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="EG2PabloPerezANT" default="test" basedir=".">
+<project name="EG2PabloPerez" default="test" basedir=".">
     
 	<!-- Variables globales -->
 	<property name="src" location="src" />
@@ -8,7 +8,7 @@
 	<property name="test" location="test" />
 	<property name="junit" location="lib/junit-4.10.jar" />
 	<property name="testReport" location="testReport" />
-	<property name="name" value="EG2PabloPerezANT" />
+	<property name="name" value="EG2PabloPerez" />
 	<property name="version" value="1.0.0" />
 	
 	<!-- Se resuelven las dependencias -->
